--- a/Changes
+++ b/Changes
@@ -28,3 +28,5 @@ Revision history for Quant-Framework
         Adding Spot and related modules
 0.31    2 Aug 2016
         New algorithm for volatility calculation
+0.32    5 Aug 2016
+        Remove set smile functionality
