--- a/Changes
+++ b/Changes
@@ -30,3 +30,5 @@ Revision history for Quant-Framework
         New algorithm for volatility calculation
 0.32    5 Aug 2016
         Remove set smile functionality
+0.33    12 Aug 2016
+        Fixes minimum volatility spread bug.
